adjust deb repository

--- a/deploy_jenkins/ansible/install_jenkins.yml
+++ b/deploy_jenkins/ansible/install_jenkins.yml
@@ -10,7 +10,8 @@
       state: present
 
   - name: ensure the repository is configured
-      apt_repository: repo='deb https://pkg.jenkins.io/debian-stable binary/'
+      apt_repository:
+      repo: deb https://pkg.jenkins.io/debian-stable binary/
       state: present
 
   - name: Install java
